Fixed word-wrap issue in comments

--- a/wordpress/wp-content/themes/Eris/assets/sass/_presentation.scss
+++ b/wordpress/wp-content/themes/Eris/assets/sass/_presentation.scss
@@ -1026,6 +1026,7 @@ $tab-padding: "1em 0 .6em 0";
     article {
       font-size: 13px;
       margin: 1em 0;
+      word-wrap: break-word;
     }
 
     .responseTo {
